--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 /* ---- Flowchart ---- */
 
-.flowchart rect {
+.flowchart .datapoint rect {
     fill: rgb(1, 87, 12);
     stroke: rgb(226, 226, 226);
     shape-rendering: crispEdges;
@@ -13,6 +13,12 @@ body {
 
 .flowchart .datapoint.hover rect {
     fill: rgb(0, 124, 16);
+}
+
+.flowchart .datapoint text {
+    fill: white;
+    text-anchor: middle;
+    alignment-baseline: middle;
 }
 
 /* ---- /Flowchart ---- */
