--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-    background-color: rgb(15, 15, 15);
+    background-color: rgb(0, 2, 9);
     font-family: sans-serif;
 }
 
@@ -106,6 +106,13 @@ body {
 
 /* ---- /Flowchart ---- */
 
+/* ---- Streamchart ---- */
+
+.streamchart rect {
+    shape-rendering: crispEdges;
+}
+
+/* ---- Streamchart ---- */
 
 .hidden {
     display: none;
