Got streamgraph working. No hovering or anything at the moment, and it's not really pretty.

--- a/style.css
+++ b/style.css
@@ -130,6 +130,10 @@ body {
     shape-rendering: crispEdges;
 }
 
+.streamchart path {
+    stroke: rgb(8, 43, 94);
+}
+
 /* ---- Streamchart ---- */
 
 .hidden {
