--- a/style.css
+++ b/style.css
@@ -4,41 +4,64 @@ body {
     font-family: sans-serif;
 }
 
+h2 {
+    color: white;
+    font-size: 2rem;
+}
+
+p {
+    color: white;
+}
+
+.graph-container h2 {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
 /* Common background and color parameters. */
 .commodity-selector,
 .details-display {
-    background-color: rgb(1, 87, 12);
+    background-color: rgb(0, 2, 32);
     color: rgb(226, 226, 226);
-    border: solid rgb(226, 226, 226) 1px;
+    border: solid rgb(16, 18, 78) 1px;
 }
 
 /* ---- Filter container ---- */
+
+.filter-container {
+    float: left;
+    width: 20rem;
+    margin-right: 6rem;
+}
 
 /* -- Commodity selectors -- */
 
 .commodity-selector {
     display: block;
-    float: left;
 
-    width: 5rem;
-    height: 5rem;
+    box-sizing: border-box;
+
+    width: 100%;
+
+    /*width: 5rem;
+    height: 5rem;*/
     margin: 0.2rem;
-    padding: 0.2rem;
+    padding: 0.5rem;
 }
 
 .commodity-selector.selected {
-    background-color: rgb(209, 146, 20);
-    color: rgb(15, 15, 15);
+    background-color: rgb(0, 43, 153);
 }
 
 .commodity-selector p {
-    font-size: 11px;
+    margin: 0;
+    font-size: 1rem;
     pointer-events: none;
 }
 
 /* -- /Commodity selectors -- */
 
-.filter-container .year-slider {
+.year-slider {
     width: 100%;
 }
 
@@ -89,6 +112,12 @@ body {
 .graph-container {
     width: auto;
     float: left;
+
+    margin-right: 3rem;
+}
+
+.slider-container {
+    width: 100%;
 }
 
 /* ---- Flowchart ---- */
@@ -113,6 +142,10 @@ body {
 /* ---- /Flowchart ---- */
 
 /* ---- Streamchart ---- */
+
+.streamchart .background {
+    fill: rgba(0, 247, 255, 0.05);
+}
 
 .streamchart .bar {
     shape-rendering: crispEdges;
@@ -143,6 +176,17 @@ body {
 
 .streamchart path {
     shape-rendering: geometricPrecision;
+}
+
+.streamchart .axis path,
+.streamchart .axis line {
+    fill: none;
+    stroke: rgb(255, 255, 255);
+    shape-rendering: crispEdges;
+}
+
+.streamchart .axis text {
+    fill: white;
 }
 
 /* ---- Streamchart ---- */
