--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h2 {
 
 p {
     color: white;
+    margin: 0;
 }
 
 .graph-container h2 {
@@ -50,7 +51,7 @@ p {
 }
 
 .commodity-selector.selected {
-    background-color: rgb(0, 43, 153);
+    background-color: rgba(11, 144, 230, 0.83);
 }
 
 .commodity-selector p {
@@ -70,26 +71,25 @@ p {
 /* ---- Details display ---- */
 
 .details-display {
-    width: 10rem;
-    height: 10rem;
+    min-width: 20rem;
     float: left;
     position: relative;
 
-    padding: 0.2rem;
+    padding: 0.5rem;
 }
 
 .details-display h2 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-
-    transform: translate(-50%, -50%);
-
-    padding: 0;
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .details-display p {
+    margin-top: 0.1rem;
+    margin-bottom: 0.1rem;
+    font-size: 1.1rem;
+}
+
+/*.details-display p {
     position: absolute;
 
     padding: 0.2rem;
@@ -104,7 +104,7 @@ p {
 .details-display .details-export {
     bottom: 0;
     right: 0;
-}
+}*/
 
 /* ---- /Details display ---- */
 
@@ -185,8 +185,12 @@ p {
     shape-rendering: crispEdges;
 }
 
-.streamchart .axis text {
+.streamchart text {
     fill: white;
+}
+
+.streamchart .year-total-label {
+    text-anchor: middle;
 }
 
 /* ---- Streamchart ---- */
