--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ p {
     position: relative;
 
     padding: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 .details-display h2 {
@@ -107,6 +108,17 @@ p {
 }*/
 
 /* ---- /Details display ---- */
+
+.color-box {
+    float: left;
+    height: 1.2rem;
+    width: 1.2rem;
+
+    margin-right: 0.5rem;
+}
+
+.color-label {
+}
 
 
 .graph-container {
