--- a/style.css
+++ b/style.css
@@ -4,14 +4,48 @@ body {
     font-family: sans-serif;
 }
 
+h1 {
+    color: white;
+    margin-top: 0rem;
+    margin-bottom: 0;
+    padding-left: 2rem;
+}
+
 h2 {
     color: white;
     font-size: 2rem;
 }
 
+h3 {
+    color: rgb(186, 186, 186);
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+    padding-left: 2rem;
+}
+
 p {
     color: white;
     margin: 0;
+}
+
+.text-container {
+    box-sizing: border-box;
+
+    float: none;
+    width: 100%;
+    overflow: hidden;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
+}
+
+.textblock {
+    display: block;
+    float: left;
+    width: 50%;
+    box-sizing: border-box;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 .graph-container h2 {
