Fixed scatterplot +CSS Tooltip added
The refreshing is still broken though...

--- a/style.css
+++ b/style.css
@@ -244,3 +244,16 @@ p {
 .hidden {
     display: none;
 }
+
+div.tooltip {   
+    position: absolute;         
+    text-align: center;         
+    width: 120px;                    
+    height: 50px;                   
+    padding: 15px;               
+    font: 12px sans-serif;      
+    background: blue; 
+    border: 0px;        
+    border-radius: 8px;         
+    pointer-events: none;           
+}
