--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 
 body {
-    background-color: rgb(0, 2, 9);
+    background-color: rgb(33, 33, 33);
     font-family: sans-serif;
+}
+
+main {
+    width: 90%;
+    position: relative;
+    display: block;
+    margin: 0 auto 0;
 }
 
 h1 {
@@ -9,23 +16,27 @@ h1 {
     margin-top: 0rem;
     margin-bottom: 0;
     padding-left: 2rem;
+    font-family: 'Roboto', sans-serif;
 }
 
 h2 {
-    color: white;
+    color: rgb(121,134,203);
     font-size: 2rem;
+    font-family: 'Roboto', sans-serif;
 }
 
 h3 {
-    color: rgb(186, 186, 186);
+    color: rgb(121,134,203);
     margin-top: 0.5rem;
     margin-bottom: 1rem;
     padding-left: 2rem;
+    font-family: 'Roboto', sans-serif;
 }
 
 p {
     color: white;
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 .text-container {
@@ -56,8 +67,8 @@ p {
 /* Common background and color parameters. */
 .commodity-selector,
 .details-display {
-    background-color: rgb(0, 2, 32);
-    color: rgb(226, 226, 226);
+    background-color: rgb(224,224,224);
+    color: rgb(174,213,129);
     border: solid rgb(16, 18, 78) 1px;
 }
 
@@ -85,12 +96,17 @@ p {
 }
 
 .commodity-selector.selected {
-    background-color: rgba(11, 144, 230, 0.83);
+    background-color: rgba(121,134,203, 0.83);
+}
+
+.commodity-selector.selected p {
+    color: white;
 }
 
 .commodity-selector p {
+    color: rgb(33,33,33);
     margin: 0;
-    font-size: 1rem;
+    font-size: 1.1rem;
     pointer-events: none;
 }
 
@@ -98,6 +114,7 @@ p {
 
 .year-slider {
     width: 100%;
+    height: 3%;
 }
 
 /* ---- /Filter container ---- */
@@ -122,6 +139,7 @@ p {
     margin-top: 0.1rem;
     margin-bottom: 0.1rem;
     font-size: 1.1rem;
+    color: rgb(33, 33, 33);
 }
 
 /*.details-display p {
@@ -190,7 +208,8 @@ p {
 /* ---- Streamchart ---- */
 
 .streamchart .background {
-    fill: rgba(0, 247, 255, 0.05);
+    fill: rgba(97,97,97, 0.05);
+    border-radius: 15px;
 }
 
 .streamchart .bar {
@@ -252,8 +271,43 @@ div.tooltip {
     height: 50px;                   
     padding: 15px;               
     font: 12px sans-serif;      
-    background: blue; 
+    background: white; 
     border: 0px;        
     border-radius: 8px;         
     pointer-events: none;           
+}
+
+/*Took from: http://brennaobrien.com/blog/2014/05/style-input-type-range-in-every-browser.html */
+/* Only compatible with webkit browser */
+
+
+input[type=range] {
+    /*removes default webkit styles*/
+    -webkit-appearance: none;
+    
+    /*fix for FF unable to apply focus style bug */
+    border: 1px solid white;
+    
+    /*required for proper track sizing in FF*/
+}
+input[type=range]::-webkit-slider-runnable-track {
+    height: 5px;
+    background: #fff;
+    border: none;
+    border-radius: 3px;
+}
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border: none;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    background: rgb(121,134,203);
+    margin-top: -9px;
+}
+input[type=range]:focus {
+    outline: none;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #ccc;
 }
